Getting small fix for Chrome (and possibly FF; worked fine hitherto in Safari) into the codebase: Rollovers on menu active items wouldn't expand/collapse the other menu items; they'd default to always open. This was due to the :not(li.active) selector. For whatever reason, reducing the inner selector to simply .active got things going for Chrome.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -85,11 +85,11 @@ nav ul li.active * {
   color: white;
 }
 
-nav ul.active > :not(li.active) {
+nav ul.active > :not(.active) {
   display: none;
 }
 
-nav ul.active:hover > :not(li.active) {
+nav ul.active:hover > :not(.active) {
   display: inline-block;
 }
 
@@ -141,4 +141,9 @@ footer li::before {
 footer li:first-child::before {
   content: "";
   margin: 0;
+}
+
+main {
+  max-width: 400px;
+  line-height: 1.75em;
 }
